<resources>
    <string name="app_name">PocketToken</string>

    <string name="transfer_title_str">发送积分</string>
    <string name="transfer_desc_input_str">请填写备注</string>
    <string name="transfer_account_balance_title_str">账户积分余额：</string>
    <string name="receipt_qrcode_hint">扫二维码，转入%s</string>
    <string name="points_str">积分</string>
    <string name="receipt_qrcode_title">接收积分</string>
    <string name="receipt_qrcode_count">指定积分数量</string>

    <string name="receipt_qrcode_set_num">指定积分</string>
    <string name="receipt_qrcode_clear_num">清除积分</string>
    <string name="receive_points_code_title_str">积分收款码</string>

    <string name="points_intro_title_str">积分介绍</string>
    <string name="assets_details_sub_title">基本信息</string>
    <string name="assets_details_sub_inc">公司/组织：</string>
    <string name="assets_details_sub_contract_address">合约地址：</string>
    <string name="assets_details_sub_title2">积分介绍</string>
    <string name="assets_details_sub_intro">OnlyChain打造的是应用型生态公链，目的是整合一切可用的计算机闲置资源，积极构建一个中心化应用利用闲置资源、去中心化应用融合共识机制的区块链应用生态圈。打造一链一生态（只存在一条Token母链），造福创业者、企业、用户，目前基于OnlyChain的基础链已构建第一款物联网结合区块链的防伪溯源落地应用。</string>
    <string name="assets_details_sub_title3">发行数据</string>
    <string name="assets_details_sub_status">状态：</string>
    <string name="assets_details_sub_status_circulated">流通中</string>
    <string name="assets_details_sub_status_uncirculated">未流通</string>
    <string name="assets_details_sub_issued_date">发行日期：</string>

    <string name="transaction_detail_title">详情</string>
    <string name="transaction_points_count">积分数量</string>
    <string name="transaction_receive_address">积分获取地址</string>
    <string name="transaction_send_address">积分发送地址</string>
    <string name="transaction_trade_nunber">交易号</string>
    <string name="query_select_detail">查询详细信息</string>
    <string name="points_toptitle_str">积分兑换</string>
    <string name="points_exchange_record_str">兑换记录</string>
    <string name="points_exchange_date_str">日期</string>
    <string name="points_exchange_status_str">兑换状态</string>
    <string name="points_to_exchange_str">去兑换</string>
    <string name="points_exchange_address_str">兑换地址</string>
    <string name="points_exchange_count_str">兑换数量</string>
    <string name="points_exchange_address_tips_str">请确认该地址为积分兑换的地址</string>
    <string name="points_exchange_input_address_hint_str">请输入兑换地址</string>
    <string name="points_exchange_input_count_hint_str">请输入需要兑换的积分</string>
    <string name="points_exchange_balance_str">可用积分余额：</string>
    <string name="points_exchange_arrival_str">到账积分数量</string>
    <string name="points_title_str">真唯度溯源积分兑换步骤</string>
    <string name="points_exchange_step1">1.登录真唯度账号</string>
    <string name="points_exchange_step3">3.申请积分兑换</string>
    <string name="points_exchange_step2">2.绑定首页钱包地址</string>
    <string name="points_exchange_step4">4.积分转至个人钱包</string>
    <string name="points_exchange_binding_zwd">绑定真唯度账号</string>
    <string name="app_login_code">短信验证码登录</string>
    <string name="app_login_pwd">密码登录</string>
    <string name="app_login_register">登录或注册真唯度</string>
    <string name="zwd_name">真唯度</string>
    <string name="app_introduce">基于区块链技术的防伪溯源平台</string>
    <string name="btn_login">登录</string>
    <string name="phone_is_null">请输入您的手机号</string>
    <string name="code_not_empty">验证码不得为空</string>
    <string name="pwd_not_empty">密码不得为空</string>
    <string name="get_code">获取验证码</string>
    <string name="code_is_null">请输入验证码</string>
    <string name="psw_is_null">请输入您的密码</string>
    <string name="get_code_count">%ds</string>

    <string name="points_curr_address_title">当前地址</string>
    <string name="points_mine">我的积分</string>
    <string name="points_exchange">去兑换</string>
    <string name="switch_zwd_acount">切换账号</string>

    <string name="assets_name_str">资产：%s</string>
    <string name="assets_tran_fail_str">交易失败</string>
    <string name="points_wrong_psw_tip">请输入有效的地址</string>
    <string name="points_same_address_tip">发送地址不能与接收地址相同</string>
    <string name="points_please_input_points_tip">请输入积分数量</string>
    <string name="points_please_input_exchange_points_tip">请输入兑换数量</string>

    <string name="points_exchange_success_str">已成功</string>
    <string name="points_exchange_fail_str">失败</string>
    <string name="points_exchange_ing_str">审核中</string>
    <string name="points_exchange_success_tip_str">兑换成功</string>

</resources>