<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_new_base_white_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_below="@id/root_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="3dp"
                    android:layout_height="17dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_rectange_r3_365cfe"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/assets_details_sub_title"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </RelativeLayout>

            <!--  基本信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black_80a"
                    android:textSize="16sp"
                    android:text="@string/assets_details_sub_inc"
                    />
                <TextView
                    android:id="@+id/inc_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/color3256E1"
                    tools:text="厦门唯物链科技有限公司"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black_80a"
                    android:textSize="16sp"
                    android:text="@string/assets_details_sub_contract_address"
                    />
                <TextView
                    android:id="@+id/contract_address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/color3256E1"
                    tools:text="0x123e18806sdgqd"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:maxEms="10"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="3dp"
                    android:layout_height="17dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_rectange_r3_365cfe"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/assets_details_sub_title2"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </RelativeLayout>
            <!--  资产介绍-->
            <TextView
                android:id="@+id/introduction_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textColor="@color/black_80a"
                tools:text="@string/assets_details_sub_intro"
                android:lineSpacingMultiplier="1.5"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="3dp"
                    android:layout_height="17dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_rectange_r3_365cfe"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/assets_details_sub_title3"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </RelativeLayout>
            <!--  发行数据-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black_80a"
                    android:textSize="16sp"
                    android:text="@string/assets_details_sub_status"
                    />
                <TextView
                    android:id="@+id/status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black_60a"
                    tools:text="流通中"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black_80a"
                    android:textSize="16sp"
                    android:text="@string/assets_details_sub_issued_date"
                    />
                <TextView
                    android:id="@+id/issued_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black_60a"
                    tools:text="2020-01-09"
                    />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/layout_nodata"/>
</RelativeLayout>