<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@drawable/white_10dp_conner">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_222222"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="积分兑换确认" />
    <RelativeLayout
        android:id="@+id/address_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv">

        <View
            android:layout_width="3dp"
            android:layout_height="17dp"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_rectange_r3_365cfe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/points_exchange_address_str"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/address_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/points_exchange_address_tips_str"
        android:textColor="#999999"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_title_layout" />

    <!--  钱包密码-->
    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/white_conner_shadow_bg"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_desc_tv">
        <EditText
            android:id="@+id/address_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/points_exchange_input_address_hint_str"
            android:textColor="@color/color_222222"
            android:textSize="14sp"/>
        <ImageView
            android:id="@+id/select_address_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_gravity="center"
            android:src="@mipmap/contact_icon"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/count_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_layout">

        <View
            android:layout_width="3dp"
            android:layout_height="17dp"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_rectange_r3_365cfe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/points_exchange_count_str"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>


    <EditText
        android:id="@+id/points_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_conner_shadow_bg"
        android:padding="14dp"
        android:digits="0123456789"
        android:hint="@string/points_exchange_input_count_hint_str"
        android:textColor="@color/color_222222"
        android:textSize="14sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/count_title_layout" />

    <LinearLayout
        android:id="@+id/balance_point_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/points_et">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_exchange_balance_str"
            android:textColor="@color/black_60a"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/balance_point_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_365cfe"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="2000" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/arrival_points_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_point_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/points_exchange_arrival_str"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/arrival_points_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_10dp_top_conner"
        app:layout_constraintTop_toBottomOf="@id/arrival_points_layout">

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:textColor="@color/black_50a"
            android:textSize="14sp"
            android:text="@string/cancel"
            android:gravity="center"
            android:background="@drawable/grey25_stroke_white_bg"/>
        <TextView
            android:id="@+id/sure_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/sure"
            android:gravity="center"
            android:background="@drawable/blue25_stroke_bg"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>